Fix long url wrapping.

--- a/static/css/poole.css
+++ b/static/css/poole.css
@@ -304,6 +304,7 @@ tbody tr:nth-child(odd) th {
 .page,
 .post {
   margin-bottom: 4em;
+  word-wrap: break-word;
 }
 
 /* Blog post or page title */
